[project]
name = "Prompter9000"
version = "2.0.2"
authors = [
  { name="Randall Nagy", email="r.a.nagy@gmail.com" },
]
description = "C.L.I <-> G.U.I Dictionary Editor"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/soft9000/Blog9000"
"Bug Tracker" = "https://github.com/soft9000/Blog9000/issues"